# UAV_Projects

./: README.md
Experiments_ArDrone2/: README.md
Experiments_ArDrone2/cvdrone-examples-cmake/: CMakeLists.txt  main.cpp  video_writer_from_drone.cpp
Experiments_ArDrone2/cvdrone-examples-cmake/include/: ardrone.h  lib_util_fs.h
Experiments_ArDrone2/cvdrone-examples-cmake/samples/: sample_camera_calibration.cpp  sample_condens_tracking.cpp  sample_deadreckoning.cpp  sample_deadreckoning_kalman.cpp  sample_default.cpp  sample_detection.cpp  sample_flight_animation.cpp  sample_hog.cpp  sample_hough_circle.cpp  sample_kalman_tracking.cpp  sample_led_animation.cpp  sample_minimal.cpp  sample_navdata.cpp  sample_optical_flow.cpp  sample_stitching.cpp  sample_vanishing_point.cpp  sample_video_record.cpp  sample_video_writer.cpp
Experiments_ArDrone2/cvdrone-examples-cmake/src/: lib_util_fs.cpp  navdata.cpp
Experiments_ArDrone2/data/data_r109_0/: video.drone_115.3.15.11.10.19.avi.csv  video.drone_115.3.15.11.4.23.avi.csv  video.drone_115.3.15.11.9.0.avi.csv
Experiments_ArDrone2/data/data_r109_1/: video.drone_115.3.15.13.1.24.avi.csv
Experiments_ArDrone2/data/data_r109_2/: video.drone_115.3.15.16.35.30.avi.csv  video.drone_115.3.15.16.39.19.avi.csv
Experiments_ArDrone2/matlab_ardrone_telemetry/: read_data_and_draw_plots.m  test_read.m
Experiments_PhaseCorrelation2/: README.md
Experiments_PhaseCorrelation2/data/data_test_frames_ShiftX_0/: idx.csv
Experiments_PhaseCorrelation2/data/data_test_frames_ShiftY_0/: idx.csv
Experiments_PhaseCorrelation2/data/data_test_frames_rot_0/: idx.csv
Experiments_PhaseCorrelation2/data/data_test_frames_rot_scl_0/: idx.csv  idx.csv-bk  idx.csv_trj.csv
Experiments_PhaseCorrelation2/data/data_test_frames_scl_0/: idx.csv
Experiments_PhaseCorrelation2/data/data_test_frames_scl_1/: idx.csv  idx.csv_trj.csv
Experiments_PhaseCorrelation2/data_results/: .gitignore
Experiments_PhaseCorrelation2/src_cpp_opencv/VideoNav9_CMake/: CMakeLists.txt  VideoNav.cpp
Experiments_PhaseCorrelation2/src_python/PhaseCorr_RotScaleShift/: gui_qt4_scene_preview.py  phcorr.py
TrajectoryCorrelator/: TrajectoryCorrelator.pro  main.cpp
TrajectoryVisualizer/: .gitignore  CMakeLists.txt  README.md  TrajectoryAlgorithms.pri  TrajectoryVisualizer.pro  config_example.ini  config_singleton.cpp  config_singleton.h  main.cpp  main_view.ui  resources.qrc
TrajectoryVisualizer/algorithms/: feature2d_manager.cpp  feature2d_manager.h  feature_based_restorer.cpp  feature_based_restorer.h  ilocation_restorer.h  image_info_estimator.h  image_info_gradient_estimator.h  local_restorer_by_frame.cpp  local_restorer_by_frame.h  progress_bar_notifier.cpp  progress_bar_notifier.h  restorer_by_cloud.cpp  restorer_by_cloud.h  restorer_by_frame.cpp  restorer_by_frame.h  restorer_by_frame_blocks.cpp  restorer_by_frame_blocks.h  saveable_flann_matcher.h  saveableflannmatcher.h  trajectory_loader.cpp  trajectory_loader.h  trajectory_recover.cpp  trajectory_recover.h  transformator.cpp  transformator.h
TrajectoryVisualizer/controller/: main_controller.cpp  main_controller.h
TrajectoryVisualizer/data/trajectory1/: idx.csv  idx.info
TrajectoryVisualizer/data/trajectory2/: .gitignore  idx.csv  idx.csv_ORB_SIFT_descriptors.xml  idx.info
TrajectoryVisualizer/data/trajectory3/: idx.csv  idx.csv_ORB_ORB_descriptors.xml  idx.info
TrajectoryVisualizer/model/: dataset.h  main_model.cpp  main_model.h  trajectory_info.h
TrajectoryVisualizer/model/entities/: location.h  map.h  trajectory.cpp  trajectory.h
TrajectoryVisualizer/utils/: acmopencv.h  csv.h  geom_utils.cpp  geom_utils.h  gradient_density.cpp  gradient_density.h  image_transforms.cpp  image_transforms.h
TrajectoryVisualizer/view/: graphics_direction_item.cpp  graphics_direction_item.h  graphics_fast_keypoint_item.cpp  graphics_fast_keypoint_item.h  graphics_frame_item.cpp  graphics_frame_item.h  graphics_keypoint_item.cpp  graphics_keypoint_item.h  graphics_map_item.cpp  graphics_map_item.h  graphics_map_scene.cpp  graphics_map_scene.h  graphics_map_view.cpp  graphics_map_view.h  graphics_matches_item.cpp  graphics_matches_item.h  graphics_orientation_item.cpp  graphics_orientation_item.h  graphics_trajectory_item.cpp  graphics_trajectory_item.h  main_view.cpp  main_view.h
UAV_Navigation_Python/Correlation_methods/: test_LogPolar.py  test_corr_shift.py  test_phase_correlation.py  test_phase_correlation_frameshift.py
UAV_Navigation_Python/Correlation_methods/ASEF_CorrFilter/: test_bolme_asef.py
UAV_Navigation_Python/Correlation_methods/PhaseCorr_RotScaleShift/: exmpl_mpl_image_affine.py  gui_qt4_scene_preview.py  phcorr.py  test_phase_RotScaleShift.py  test_phase_RotScaleShift2.py  test_phase_RotScaleShift3.py
UAV_Navigation_Python/Correlation_methods/PhaseCorr_RotScaleShift/test_gui/: test_matplotlib.py  test_qt4_qgraphicscene.py
UAV_Navigation_Python/Correlation_methods/Template_Matching_Example/: ex_match_multi_templates.py  ex_match_multi_templates2.py
UAV_Navigation_Python/Kalman_Filtering/: test_KalmanFilter.py
UAV_Navigation_Python/LocalFeatures_methods/: gui_qt4_trj_preview.py  libfp.py  libphcorr.py  make_dirframes_from_video.py  make_kp_from_dirframes.py  make_kp_from_dirframes_best.py  make_kp_trj_reconstruction.py  test_FP_FrameShift.py  test_FP_FrameShift2.py  test_GFTT_shift.py  test_HomographyEstimation.py  test_match_01_fp_n_frames_postprocess_and_ReprojectTrj.py  test_match_02_buildHomography.py  test_match_fp_2frames.py  test_match_fp_n_frames.py  test_match_fp_n_frames_postprocess.py  test_of_the_test.py
UAV_Navigation_Python/LocalFeatures_methods/Examples_Skimage/: Test_Daisy.py
UAV_Navigation_Python/LocalFeatures_methods/small_tests/: test_Serialization_FP.py  test_multiple_homography.py
UAV_Navigation_Python/Trajectory_Modelling/: gui_pyqt4_heightmap.py
